0033421: Modeling Algorithms - ShapeUpgrade_UnifySameDomain throws exception

In method ShapeUpgrade_UnifySameDomain::IntUnifyFaces() the searched edge is finally checked that it is not empty before accessing it.