src/ShapeUpgrade/ShapeUpgrade_UnifySameDomain.cxx
@@ -3603,6 +3603,10 @@ void ShapeUpgrade_UnifySameDomain::IntUnifyFaces(const TopoDS_Shape& theInpShape
               
               ReconstructMissedSeam (RemovedEdges, F_RefFace, CurEdge, CurVertex, CurPoint,
                                      Uperiod, Vperiod, NextEdge, NextPoint);
+              if (NextEdge.IsNull())
+              {
+                return;
+              }
             }
             else
               return;
